--- a/pet_care/app/src/main/res/layout/activity_main.xml
+++ b/pet_care/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
         android:id="@+id/imageView3"
         android:layout_width="124dp"
         android:layout_height="107dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -35,100 +35,65 @@
         android:id="@+id/sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="Вход"
         android:textColor="@color/dark_gray"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/greetings"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="0dp"
-        android:layout_height="3dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/email_input"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
     <EditText
         android:id="@+id/password_input"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="344dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:fontFamily="@font/asap_medium"
         android:hint="Введите пароль"
         android:inputType="textPassword"
         android:textColor="@color/dark_gray"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_entry"
-        app:layout_constraintEnd_toEndOf="@+id/view3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="@+id/password"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="44dp"
         android:fontFamily="@font/asap_bold"
         android:text="Почта"
         android:textColor="@color/blue"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/email_input"
+        app:layout_constraintStart_toStartOf="@+id/greetings"
         app:layout_constraintTop_toBottomOf="@+id/greetings" />
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="0dp"
-        android:layout_height="3dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/button_entry"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/password_input"
-        app:layout_constraintVertical_bias="0.133" />
 
     <TextView
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/asap_bold"
         android:text="Пароль"
         android:textColor="@color/blue"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/email"
         app:layout_constraintTop_toBottomOf="@+id/email_input" />
 
     <EditText
         android:id="@+id/email_input"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="33dp"
+        android:layout_width="344dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:fontFamily="@font/asap_medium"
         android:hint="Введите почту"
@@ -138,45 +103,42 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/email" />
+        app:layout_constraintStart_toStartOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <Button
         android:id="@+id/button_entry"
-        android:layout_width="0dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="86dp"
+        android:layout_width="258dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:text="Войти"
         android:textColor="@color/white"
         android:textSize="17sp"
-        app:layout_constraintBottom_toTopOf="@+id/about"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password_input" />
 
     <TextView
         android:id="@+id/greetings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="98dp"
         android:fontFamily="@font/asap"
         android:text="Привет! Рады снова тебя видеть!"
         android:textColor="@color/gray"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sign"
-        app:layout_constraintTop_toBottomOf="@+id/app_name" />
+        app:layout_constraintTop_toBottomOf="@+id/sign" />
 
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/asap_medium"
         android:text="Забыли пароль?"
         android:textColor="@color/gray"
@@ -188,26 +150,29 @@
         android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="84dp"
         android:fontFamily="@font/asap_medium"
         android:text="About us"
         android:textColor="@color/gray"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/forgot_password"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_entry" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_entry"
+        app:layout_constraintVertical_bias="0.007" />
 
     <TextView
         android:id="@+id/sign_up_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="28dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="Зарегистрироваться"
         android:textColor="@color/blue"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_entry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
