--- a/pet_care/app/src/main/res/layout/activity_main.xml
+++ b/pet_care/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
+        android:onClick="clickEntry"
         android:text="Войти"
         android:textColor="@color/white"
         android:textSize="17sp"
