add lk_page and function to entry_button

--- a/pet_care/app/src/main/res/values/colors.xml
+++ b/pet_care/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="dark_gray">#35424a</color>
     <color name="gray">#989eb1</color>
     <color name="blue">#0c59cf</color>
+    <color name="darck_blue">#05337C</color>
+    <color name="light_gray">#EBEBEB</color>
 </resources>
