--- a/pet_care/app/src/main/res/layout/activity_sign_up.xml
+++ b/pet_care/app/src/main/res/layout/activity_sign_up.xml
@@ -4,14 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="clickSignup"
-    tools:context=".MainActivity">
+    tools:context=".SignUp">
+
+    <TextView
+        android:id="@+id/email2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/asap_bold"
+        android:text="Имя"
+        android:textColor="@color/blue"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/greetings"
+        app:layout_constraintTop_toBottomOf="@+id/greetings" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="124dp"
         android:layout_height="107dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +49,14 @@
         android:id="@+id/sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/quicksand_bold"
-        android:text="Вход"
+        android:text="Регистрация"
         android:textColor="@color/dark_gray"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
@@ -67,15 +80,27 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/asap_bold"
         android:text="Почта"
         android:textColor="@color/blue"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/greetings"
-        app:layout_constraintTop_toBottomOf="@+id/greetings" />
+        app:layout_constraintStart_toStartOf="@+id/email3"
+        app:layout_constraintTop_toBottomOf="@+id/sername_input" />
+
+    <TextView
+        android:id="@+id/email3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/asap_bold"
+        android:text="Фамилия"
+        android:textColor="@color/blue"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/email2"
+        app:layout_constraintTop_toBottomOf="@+id/name_input" />
 
     <TextView
         android:id="@+id/password"
@@ -109,16 +134,17 @@
 
     <Button
         android:id="@+id/button_entry"
-        android:layout_width="258dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="219dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:onClick="clickEntry"
-        android:text="Войти"
+        android:text="Зарегистрироваться"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_input" />
 
@@ -127,7 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/asap"
-        android:text="Привет! Рады снова тебя видеть!"
+        android:text="Приветствуем в нашем приложении!"
         android:textColor="@color/gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,12 +165,14 @@
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/asap_medium"
-        android:text="Забыли пароль?"
+        android:text="Есть аккаунт?"
         android:textColor="@color/gray"
         android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/signin_button"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_entry" />
 
@@ -152,7 +180,7 @@
         android:id="@+id/about"
         android:layout_width="76dp"
         android:layout_height="48dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/asap_medium"
         android:onClick="clickAbout"
         android:text="О нас"
@@ -161,22 +189,51 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_entry"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/signin_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="48sp"
+        android:layout_height="48sp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="110dp"
         android:fontFamily="@font/quicksand_bold"
-        android:text="Зарегистрироваться"
+        android:onClick="clickSignin"
+        android:text="Войти"
         android:textColor="@color/blue"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/forgot_password"
         app:layout_constraintTop_toBottomOf="@+id/button_entry" />
+
+    <EditText
+        android:id="@+id/name_input"
+        android:layout_width="344sp"
+        android:layout_height="57sp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:hint="Введите имя"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/email2"
+        app:layout_constraintTop_toBottomOf="@+id/email2" />
+
+    <EditText
+        android:id="@+id/sername_input"
+        android:layout_width="344sp"
+        android:layout_height="57sp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="40dp"
+        android:ems="10"
+        android:hint="Введите фамилию"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/email3"
+        app:layout_constraintTop_toBottomOf="@+id/email3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
