--- a/pet_care/app/src/main/res/values-night/themes.xml
+++ b/pet_care/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="theme">@style/Theme.Design.NoActionBar</item>
     </style>
 </resources>
