--- a/pet_care/app/src/main/res/layout/activity_lk.xml
+++ b/pet_care/app/src/main/res/layout/activity_lk.xml
@@ -178,6 +178,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/quicksand_bold"
+        android:onClick="movePage"
         android:paddingHorizontal="10dp"
         android:paddingVertical="3dp"
         android:text=" Каталог животных"
