added pages My Care and Favorite

--- a/pet_care/app/src/main/res/layout/activity_lk.xml
+++ b/pet_care/app/src/main/res/layout/activity_lk.xml
@@ -118,6 +118,7 @@
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/quicksand_bold"
+        android:onClick="myCare"
         android:text="Моя опека"
         android:textColor="@color/darck_blue"
         android:textSize="24sp"
@@ -133,6 +134,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/quicksand_bold"
+        android:onClick="favorite"
         android:text="Любимое"
         android:textColor="@color/darck_blue"
         android:textSize="24sp"
