--- a/pet_care/app/src/main/res/layout/activity_pets.xml
+++ b/pet_care/app/src/main/res/layout/activity_pets.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="310dp"
+        android:layout_height="356dp"
         android:alpha="0.20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/petAge4"
-        android:layout_width="268dp"
+        android:layout_width="264dp"
         android:layout_height="31dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
