--- a/pet_care/app/src/main/res/layout/activity_lk.xml
+++ b/pet_care/app/src/main/res/layout/activity_lk.xml
@@ -197,6 +197,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/quicksand_light"
+        android:onClick="exitLk"
         android:text="Выйти"
         android:textColor="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
