added Pet profile and navigation

--- a/pet_care/app/src/main/res/layout/activity_pets.xml
+++ b/pet_care/app/src/main/res/layout/activity_pets.xml
@@ -244,7 +244,6 @@
         android:id="@+id/home_page"
         android:layout_width="205dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/quicksand_bold"
         android:onClick="movePage"
         android:paddingHorizontal="10dp"
@@ -260,7 +259,6 @@
         android:id="@+id/home_page2"
         android:layout_width="205dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="50dp"
         android:background="@color/light_gray"
         android:fontFamily="@font/quicksand_bold"
         android:onClick="movePage"
@@ -285,7 +283,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlePets" />
+        app:layout_constraintTop_toBottomOf="@+id/titlePets" >
+
+    </SearchView>
 
     <ImageView
         android:id="@+id/petIcon1"
@@ -342,5 +342,49 @@
         app:layout_constraintHorizontal_bias="0.562"
         app:layout_constraintStart_toEndOf="@+id/petIcon1"
         app:layout_constraintTop_toBottomOf="@+id/petAge1" />
+
+    <TextView
+        android:id="@+id/go_to"
+        android:layout_width="372dp"
+        android:layout_height="103dp"
+        android:contentDescription="@android:string/no"
+        android:onClick="goToPetProfile"
+        app:layout_constraintBottom_toBottomOf="@+id/petCare1"
+        app:layout_constraintEnd_toEndOf="@+id/petAge1"
+        app:layout_constraintStart_toStartOf="@+id/petIcon1"
+        app:layout_constraintTop_toTopOf="@+id/petName1" />
+
+    <TextView
+        android:id="@+id/go_to1"
+        android:layout_width="372dp"
+        android:layout_height="103dp"
+        android:contentDescription="@android:string/no"
+        android:onClick="goToPetProfile"
+        app:layout_constraintBottom_toBottomOf="@+id/petCare2"
+        app:layout_constraintEnd_toEndOf="@+id/petAge2"
+        app:layout_constraintStart_toStartOf="@+id/petIcon2"
+        app:layout_constraintTop_toTopOf="@+id/petName2" />
+
+    <TextView
+        android:id="@+id/go_to2"
+        android:layout_width="372dp"
+        android:layout_height="103dp"
+        android:contentDescription="@android:string/no"
+        android:onClick="goToPetProfile"
+        app:layout_constraintBottom_toBottomOf="@+id/petCare3"
+        app:layout_constraintEnd_toEndOf="@+id/petAge3"
+        app:layout_constraintStart_toStartOf="@+id/petIcon3"
+        app:layout_constraintTop_toTopOf="@+id/petName3" />
+
+    <TextView
+        android:id="@+id/go_to3"
+        android:layout_width="372dp"
+        android:layout_height="103dp"
+        android:contentDescription="@android:string/no"
+        android:onClick="goToPetProfile"
+        app:layout_constraintBottom_toBottomOf="@+id/petCare4"
+        app:layout_constraintEnd_toEndOf="@+id/petAge4"
+        app:layout_constraintStart_toStartOf="@+id/petIcon4"
+        app:layout_constraintTop_toTopOf="@+id/petName4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
