--- a/pet_care/app/src/main/res/layout/activity_lk.xml
+++ b/pet_care/app/src/main/res/layout/activity_lk.xml
@@ -150,6 +150,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/quicksand_bold"
+        android:onClick="transactions"
         android:text="История операций"
         android:textColor="@color/darck_blue"
         android:textSize="24sp"
