--- a/pet_care/app/src/main/res/layout/activity_pets.xml
+++ b/pet_care/app/src/main/res/layout/activity_pets.xml
@@ -273,17 +273,17 @@
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="368dp"
-        android:layout_height="49dp"
+        android:layout_width="316dp"
+        android:layout_height="47dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:background="@color/light_gray"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlePets" >
+        app:layout_constraintTop_toBottomOf="@+id/titlePets">
 
     </SearchView>
 
@@ -386,5 +386,16 @@
         app:layout_constraintEnd_toEndOf="@+id/petAge4"
         app:layout_constraintStart_toStartOf="@+id/petIcon4"
         app:layout_constraintTop_toTopOf="@+id/petName4" />
+
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:onClick="showDialog"
+        app:layout_constraintStart_toEndOf="@+id/searchView"
+        app:layout_constraintTop_toTopOf="@+id/searchView"
+        app:srcCompat="@drawable/setings"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
