--- a/pet_care/app/src/main/res/layout/activity_pets.xml
+++ b/pet_care/app/src/main/res/layout/activity_pets.xml
@@ -244,6 +244,7 @@
         android:id="@+id/home_page"
         android:layout_width="205dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="2dp"
         android:fontFamily="@font/quicksand_bold"
         android:onClick="movePage"
         android:paddingHorizontal="10dp"
@@ -259,6 +260,7 @@
         android:id="@+id/home_page2"
         android:layout_width="205dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="2dp"
         android:background="@color/light_gray"
         android:fontFamily="@font/quicksand_bold"
         android:onClick="movePage"
