--- a/pet_care/app/src/main/res/layout/activity_pay.xml
+++ b/pet_care/app/src/main/res/layout/activity_pay.xml
@@ -138,6 +138,7 @@
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
+        android:onClick="clickPay"
         android:text="Оплатить"
         android:textColor="@color/white"
         android:textSize="14sp"
