--- a/pet_care/app/src/main/res/layout/activity_pet_profile.xml
+++ b/pet_care/app/src/main/res/layout/activity_pet_profile.xml
@@ -31,10 +31,11 @@
 
     <ImageButton
         android:id="@+id/butFavorite"
-        android:layout_width="80dp"
+        android:layout_width="50dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
         android:contentDescription="@android:string/no"
+        android:onClick="clickFav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/favorite_icon"
@@ -49,7 +50,7 @@
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:onClick="goToPay"
-        android:text="Донат"
+        android:text="Р”РѕРЅР°С‚"
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +66,7 @@
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:onClick="goToPay"
-        android:text="Опека на пол года"
+        android:text="РћРїРµРєР° РЅР° РїРѕР» РіРѕРґР°"
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
