--- a/pet_care/app/src/main/res/layout/activity_pet_profile.xml
+++ b/pet_care/app/src/main/res/layout/activity_pet_profile.xml
@@ -50,7 +50,7 @@
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:onClick="goToPay"
-        android:text="Р”РѕРЅР°С‚"
+        android:text="ДОНАТ"
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +66,7 @@
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/asap_bold"
         android:onClick="goToPay"
-        android:text="РћРїРµРєР° РЅР° РїРѕР» РіРѕРґР°"
+        android:text="Опека на полгода 18 000 руб."
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
